--- a/flickit-assessment-server/pom.xml
+++ b/flickit-assessment-server/pom.xml
@@ -25,4 +25,15 @@
             <artifactId>flickit-assessment-data</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
