--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
 
 	<properties>
 		<revision>0.7.0-SNAPSHOT</revision>
-		<sonar.organization>avansoft</sonar.organization>
-		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
+
 		<java.version>17</java.version>
+		<spring-boot.version>3.0.6</spring-boot.version>
 
 		<archunit.version>1.1.0</archunit.version>
 
@@ -35,6 +35,8 @@
 		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
 		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
 
+		<sonar.organization>avansoft</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 	</properties>
 
@@ -127,18 +129,6 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
