--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
 	</modules>
 
 	<properties>
-		<revision>0.9.0-SNAPSHOT</revision>
+		<revision>0.9.0</revision>
 
 		<java.version>17</java.version>
 		<spring-boot.version>3.0.6</spring-boot.version>
