--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -126,7 +126,7 @@ jobs:
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
 
   build-and-push-latest-image:
-    needs: [sonar]
+#    needs: [sonar]
     name: deploy latest image
     runs-on: ubuntu-latest
 #    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
