--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -121,16 +121,16 @@ jobs:
 
       - name: Build and analyze
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GH_PACKAGES_TOKEN }}
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=${{ env.SONAR_PROJECT_KEY }}
 
   build-and-push-latest-image:
-#    needs: [sonar]
+    needs: [sonar]
     name: deploy latest image
     runs-on: ubuntu-latest
-#    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-#      github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
+    if: ${{ (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
+      github.event_name == 'pull_request' && github.event.action == 'closed' && github.event.pull_request.merged == true }}
 
     permissions:
       contents: write
@@ -149,7 +149,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: avansoft
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GH_PACKAGES_TOKEN }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
@@ -217,7 +217,7 @@ jobs:
         with:
           registry: ${{ env.REGISTRY }}
           username: avansoft
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GH_PACKAGES_TOKEN }}
 
       - name: Set up JDK 17
         uses: actions/setup-java@v3
