--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	</modules>
 
 	<properties>
-		<revision>0.10.0</revision>
+		<revision>0.11.0-SNAPSHOT</revision>
 
 		<java.version>17</java.version>
 		<spring-boot.version>3.0.6</spring-boot.version>
