--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 		<spring-boot.version>3.0.6</spring-boot.version>
 
 		<archunit.version>1.1.0</archunit.version>
-
+        <minio.version>8.5.7</minio.version>
 		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
 		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
 		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
@@ -135,7 +135,12 @@
             <version>${archunit.version}</version>
             <scope>test</scope>
         </dependency>
-	</dependencies>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
