--- a/flickit-assessment-server/pom.xml
+++ b/flickit-assessment-server/pom.xml
@@ -28,6 +28,10 @@
             <groupId>org.flickit</groupId>
             <artifactId>flickit-assessment-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.flickit</groupId>
+            <artifactId>flickit-advice-engine</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
