--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,11 @@
 				<artifactId>flickit-assessment-server</artifactId>
 				<version>${revision}</version>
 			</dependency>
+            <dependency>
+                <groupId>org.flickit</groupId>
+                <artifactId>flickit-advice-engine</artifactId>
+                <version>${revision}</version>
+            </dependency>
 		</dependencies>
 	</dependencyManagement>
 
