--- a/flickit-assessment-server/src/main/resources/application.properties
+++ b/flickit-assessment-server/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.database=POSTGRESQL
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=none
 
-timefold.solver.termination.spent-limit=5
+timefold.solver.termination.spent-limit=5s
