--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
 
 		<archunit.version>1.1.0</archunit.version>
         <minio.version>8.5.7</minio.version>
+        <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
 		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
 		<flatten-maven-plugin.version>1.5.0</flatten-maven-plugin.version>
 		<jacoco-maven-plugin.version>0.8.10</jacoco-maven-plugin.version>
@@ -141,6 +142,13 @@
             <artifactId>minio</artifactId>
             <version>${minio.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>net.logstash.logback</groupId>
+            <artifactId>logstash-logback-encoder</artifactId>
+            <version>${logstash-logback-encoder.version}</version>
+        </dependency>
+
     </dependencies>
 
 	<build>
