--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,7 @@
 		<java.version>17</java.version>
 		<spring-boot.version>3.0.6</spring-boot.version>
 
-		<sentry.version>7.1.0</sentry.version>
-		<sentry-maven-plugin.version>0.0.6</sentry-maven-plugin.version>
+		<sentry.version>7.3.0</sentry.version>
 		<archunit.version>1.1.0</archunit.version>
         <minio.version>8.5.7</minio.version>
 		<jib-maven-plugin.version>3.3.1</jib-maven-plugin.version>
@@ -148,7 +147,23 @@
             <artifactId>minio</artifactId>
             <version>${minio.version}</version>
         </dependency>
-    </dependencies>
+
+		<dependency>
+			<groupId>io.sentry</groupId>
+			<artifactId>sentry-spring-boot-starter-jakarta</artifactId>
+			<version>${sentry.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.sentry</groupId>
+			<artifactId>sentry-logback</artifactId>
+			<version>${sentry.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>io.sentry</groupId>
+			<artifactId>sentry-jdbc</artifactId>
+			<version>${sentry.version}</version>
+		</dependency>
+	</dependencies>
 
 	<build>
 		<plugins>
