--- a/pom.xml
+++ b/pom.xml
@@ -177,12 +177,8 @@
 						</labels>
 					</container>
 					<from>
-						<image>localhost:5000/jdk:17.0.7</image>
+						<image>ghcr.io/flickit-platform/jdk:17.0.7</image>
 					</from>
-					<to>
-						<image>localhost:5000/flickit-sentry:17.0.12</image>
-					</to>
-					<allowInsecureRegistries>true</allowInsecureRegistries>
 				</configuration>
 			</plugin>
 			<plugin>
