--- a/flickit-assessment-kit/pom.xml
+++ b/flickit-assessment-kit/pom.xml
@@ -20,6 +20,10 @@
             <groupId>org.flickit</groupId>
             <artifactId>flickit-assessment-common</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context-support</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
