--- a/flickit-assessment-server/src/main/resources/application-dev.properties
+++ b/flickit-assessment-server/src/main/resources/application-dev.properties
@@ -19,6 +19,7 @@ app.minio.access-secret=minioadmin
 app.minio.bucket-names.dsl=dsl
 app.minio.bucket-names.avatar=avatar
 app.minio.secure=false
+app.minio.init-buckets=false
 
 # minio app
 #app.minio.url=http://flickit-test-cdn.darkube.app/
