--- a/flickit-assessment-kit/pom.xml
+++ b/flickit-assessment-kit/pom.xml
@@ -24,6 +24,10 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-context-support</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.retry</groupId>
+            <artifactId>spring-retry</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
